test: add updateUser coverage, fix typo in getUserByEmail test
- updateUser: own profile update, access denied for other user's profile
- fixed a wrong expected email in an existing getUserByEmail test